--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Assets\Scripts\Canvas\Principal.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\HoyoPalo.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Colores.cs" />
-    <Compile Include="Assets\Scripts\Jugador\Unjugador.cs" />
+    <Compile Include="Assets\Scripts\Partida\Unjugador.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Bola.cs" />
     <Compile Include="Assets\Scripts\Escenario\NuevoNivel.cs" />
   </ItemGroup>
